--- a/configs/cam3.yaml
+++ b/configs/cam3.yaml
@@ -2,15 +2,15 @@ CAM:
   NAME: "CAM_03"
   NUMBER_MOI: 2
   ROI_BTC: [[1,341], [150, 210],[963,249],[1278,464], [0,462]]
-  ROI_DEFAULT: [[1,370], [150, 210],[607,230],[607,262],[987,264],[1278,464],[604,461],[607,399]]
-  TRACKING_ROI: [[2,370], [150, 210],[603,231],[610,180],[941,189], [963, 249], [1278, 464],[592,461],[611,720],[2,720]]
+  ROI_DEFAULT: [[1,341], [150, 210],[604,229],[603,287],[1038,296],[1278,464],[604,461],[607,400], [0,387]]
+  TRACKING_ROI: [[2,370], [150, 210],[603,231],[610,200],[941,209], [963, 249], [1278, 464],[592,461],[611,720],[2,720]]
   MOI1: [[347, 210], [196, 548]]
   MOI2: [[850, 512], [736, 220]]
   MOI: [[[347, 210], [196, 548]], [[850, 512], [736, 220]]]
 
-  LINE1: [[25, 317], [577, 342]]
-  LINE2: [[607,300], [1064,314]]
-  LINE: [[[25, 317], [577, 342]], [[607,300], [1064,314]]]  
+  LINE1: [[0,369], [605,382]]
+  LINE2: [[607,300], [1055,312]]
+  LINE: [[[0,369], [605,382]], [[607,300], [1055,312]]]  
 
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
@@ -20,8 +20,8 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.25
-  # MOI1 +10 MOI2 +8
-  FRAME_MOI1: 7
-  FRAME_MOI2: 40
-  FRAME_MOI: [7,40]
+  THRESHOLD_AREA: 0.3
+  # MOI1 +1 MOI2 +2
+  FRAME_MOI1: 2
+  FRAME_MOI2: 2
+  FRAME_MOI: [2,2]
