--- a/configs/cam7.yaml
+++ b/configs/cam7.yaml
@@ -1,17 +1,16 @@
 CAM:
   NAME: "CAM_07"
   NUMBER_MOI: 2
-  
-  ROI_BTC: [[20,433],[324,219],[968,226],[1270,452]]
-  ROI_DEFAULT: [[83,390], [322, 218],[632,219],[630,265], [1022,265], [1266, 448],[609,445],[612,392]]
-  TRACKING_ROI: [[19, 431], [322, 218],[627,218],[640,150],[930,152], [968, 224], [1266, 448],[623,443],[615,720],[7,720]]
-  MOI1: [[491, 197], [308, 478]]
-  MOI2: [[961, 480], [784, 204]]
-  MOI: [[[491, 197], [308, 478]], [[961, 480], [784, 204]]]
+  ROI_BTC: [[7,441],[439,150],[812,153],[1225,465]]
+  ROI_DEFAULT: [[102,375],[355,207],[889,211],[1225,465],[619,453],[632,392]]
+  TRACKING_ROI: [[10, 437], [437, 150],[630,170],[633,133],[781,134], [810, 150], [1223, 464],[631,451],[625,720],[6,720]]
+  MOI1: [[549, 144], [297, 505]]
+  MOI2: [[925, 487], [715, 144]]
+  MOI: [[[549, 144], [297, 505]], [[925, 487], [715, 144]]]
 
-  LINE1: [[128,363], [621,369]]
-  LINE2: [[640,288], [1051,284]]
-  LINE: [ [[128,363], [621,369]], [[640,288], [1051,284]]]
+  LINE1: [[135,350], [624,360]]
+  LINE2: [[637,242],[928,241]]
+  LINE: [[[135,350], [624,360]], [[637,242],[928,241]]]
   # for kalman filter - kalman_filter.py
   _STD_WEIGHT_POSITION: 12         # inverse of _std_weight_position
   _STD_WEIGHT_VELOCITY: 100         # inverse of _std_weight_velocity
@@ -19,9 +18,9 @@ CAM:
   MAX_IOU_DISTANCE: 0.85
   MAX_AGE: 3
   N_INIT: 1
-  THRESHOLD_AREA: 0.20
-  #MOI1 +2
-  FRAME_MOI1: 2
-  FRAME_MOI2: 0
-  FRAME_MOI: [2,0]
+  THRESHOLD_AREA: 0.30
+  #MOI2 +11
+  FRAME_MOI1: 0
+  FRAME_MOI2: 11
+  FRAME_MOI: [0,11]
   
